[package]
name = "anym"
description = "To emulate anonymous `struct` in Rust."
version = "0.0.0"
edition = "2021"
license = "MIT"
keywords = ["macro"]
readme = "README.md"
authors = ["rueyxian <yrueyxian@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.103", features = ["extra-traits", "full" ] }
quote = "1.0.21"
proc-macro2 = "1.0.47"

nanoid = "0.4.0"
numtoa = "0.2.4"